# fastapi-money-transfer

./: .env.example  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 6649d55dbbf0_first_revision.py
app/: main.py  utils.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: login.py  subsidiaries.py  transactions.py  users.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  crud_subsidiary.py  crud_transaction.py  crud_user.py
app/db/: base.py  base_class.py
app/email-templates/html/: new_account.html  reset_password.html
app/email-templates/mjml/: new_account.mjml  reset_password.mjml
app/factories/: __init__.py  subsidiary.py  transaction.py  user.py
app/models/: __init__.py  subsidiary.py  transaction.py  user.py
app/schemas/: __init__.py  subsidiary.py  transaction.py  user.py
